fix gradle dir config problem